Update build spec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,8 @@
 version: 0.2
 env:
   variables:
-    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
+#    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
+    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16
     IMAGE_APP_NAME: "nestjs-poc-miraen"
     IMAGE_VERSION: 1.0.0
