--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 env:
   variables:
 #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
-    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/poc-miraen"
+    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16
     IMAGE_APP_NAME: "nestjs-poc-miraen"
     IMAGE_VERSION: 1.0.0
@@ -17,8 +17,8 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-#      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+#      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
       - docker pull node:16
   build:
