--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
 #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16
-    IMAGE_APP_NAME: "nestjs-poc-miraen"
+    IMAGE_APP_NAME: "poc-miraen"
     IMAGE_VERSION: 1.0.0-dev
     PROFILE: $PROFILE
     PROJ_NAME: $PROJ_NAME
@@ -17,7 +17,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password | docker login --username AWS --password-stdin 809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/
+      - aws ecr get-login-password | docker login --username AWS --password-stdin 809695185788.dkr.ecr.ap-southeast-2.amazonaws.com
 #      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
       - docker pull node:16
