--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,9 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region ap-southeast-2 | docker login --username AWS --password-stdin 809695185788.dkr.ecr.ap-southeast-2.amazonaws.com
+      - wget -O /usr/local/bin/docker-credential-ecr-login https://amazon-ecr-credential-helper-releases.s3.us-west-2.amazonaws.com/0.5.0/linux-amd64/docker-credential-ecr-login
+      - chmod +x /usr/local/bin/docker-credential-ecr-login
+      - aws ecr get-login --no-include-email --region ap-southeast-2 | docker login --username AWS --password-stdin 809695185788.dkr.ecr.ap-southeast-2.amazonaws.com
 #      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
       - docker pull node:16
