--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,18 @@
 version: 0.2
 env:
   variables:
-#    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
-    IMAGE_PLATFORM_NAME: node:16
-    IMAGE_APP_NAME: "poc-miraen"
+    IMAGE_PLATFORM_NAME: node:18.12.0
+    IMAGE_APP_NAME: "brickmate-commerce-backend-dev"
     IMAGE_VERSION: 1.0.0-dev
-    PROFILE: $PROFILE
-    PROJ_NAME: $PROJ_NAME
-    COMPANY_NAME: $COMPANY_NAME
-    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --no-include-email --region ap-southeast-2 | docker login --username AWS --password-stdin 809695185788.dkr.ecr.ap-southeast-2.amazonaws.com
-      # - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      # - docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
-      - docker pull node:16
+      commands:
+        - echo Logging in to Amazon ECR...
+        - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+        #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
+        - docker pull node:18.12.0
   build:
     commands:
       - echo ========================================
