--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,16 +3,28 @@ env:
   variables:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:18.12.0
-    IMAGE_APP_NAME: "brickmate-commerce-backend-dev"
+    IMAGE_APP_NAME: "poc-miraen"
     IMAGE_VERSION: 1.0.0-dev
+
+    #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
+#    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
+#    IMAGE_PLATFORM_NAME: node:16
+#    IMAGE_APP_NAME: "poc-miraen"
+#    IMAGE_VERSION: 1.0.0-dev
+#    PROFILE: $PROFILE
+#    PROJ_NAME: $PROJ_NAME
+#    COMPANY_NAME: $COMPANY_NAME
+#    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
+#    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+#    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+#    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
 phases:
   pre_build:
     commands:
-      commands:
-        - echo Logging in to Amazon ECR...
-        - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
-        #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
-        - docker pull node:18.12.0
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+      #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
+      - docker pull node:18.12.0
   build:
     commands:
       - echo ========================================
