--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
     IMAGE_APP_NAME: "poc-miraen"
-    IMAGE_VERSION: 1.0.0-dev
+    IMAGE_VERSION: $(date +%Y%m%d%H%M%S)
 
     #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
 #    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
@@ -23,8 +23,6 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
-      #- docker pull $IMAGE_REPO_URL$IMAGE_PLATFORM_NAME
-      - docker pull node:16.15.1
   build:
     commands:
       - echo ========================================
