--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,6 @@ env:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
     IMAGE_APP_NAME: "api-poc-miraen"
-    IMAGE_VERSION: $NODE_ENV + "-" + $CODEBUILD_RESOLVED_SOURCE_VERSION
 phases:
   pre_build:
     commands:
@@ -23,6 +22,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION
       - echo Writing image definitions file...
+      - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - printf '[{"name":"%s:%s","imageUri":"%s"}]' $IMAGE_APP_NAME $IMAGE_VERSION $IMAGE_REPO_NAME:$IMAGE_VERSION > imagedefinitions.json
 cache:
   paths:
