--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,20 @@ env:
   variables:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
-    IMAGE_APP_NAME: "api-poc-miraen"
+    IMAGE_APP_NAME: "poc-miraen"
+
+    #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
+#    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
+#    IMAGE_PLATFORM_NAME: node:16
+#    IMAGE_APP_NAME: "poc-miraen"
+#    IMAGE_VERSION: 1.0.0-dev
+#    PROFILE: $PROFILE
+#    PROJ_NAME: $PROJ_NAME
+#    COMPANY_NAME: $COMPANY_NAME
+#    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
+#    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+#    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+#    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
 phases:
   pre_build:
     commands:
@@ -23,14 +36,17 @@ phases:
       - echo Pushing the Docker images...
       - docker push $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION
       - echo Writing image definitions file...
-
       - printf '[{"name":"%s:%s","imageUri":"%s"}]' $IMAGE_APP_NAME $IMAGE_VERSION $IMAGE_REPO_NAME:$IMAGE_VERSION > imagedefinitions.json
 cache:
   paths:
     - './node_modules/**/*'
 artifacts:
   files:
-    #- './**/*'
+    - 'imagedefinitions.json'
     - 'appspec.yml'
-    - 'stop_server.sh'
-    - 'start_server.sh'
+    - '.env'
+    - 'api_down.sh'
+    - 'api_deploy.sh'
+    - 'docker-compose.yml'
+    - 'redis.conf'
+    - 'yarn.lock'
