--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,27 +1,28 @@
 version: 0.2
 env:
   variables:
-    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
+    IMAGE_REPO_URL: $IMAGE_REPO_URL "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
-    IMAGE_APP_NAME: "poc-miraen"
-
-    #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
-#    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
-#    IMAGE_PLATFORM_NAME: node:16
-#    IMAGE_APP_NAME: "poc-miraen"
-#    IMAGE_VERSION: 1.0.0-dev
-#    PROFILE: $PROFILE
-#    PROJ_NAME: $PROJ_NAME
-#    COMPANY_NAME: $COMPANY_NAME
-#    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
-#    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-#    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-#    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    IMAGE_APP_NAME: $IMAGE_APP_NAME
+    IMAGE_VERSION: $IMAGE_VERSION
+    PROFILE: $PROFILE
+    PROJ_NAME: $PROJ_NAME
+    COMPANY_NAME: $COMPANY_NAME
+    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+      - cp appspec.yml ./appspec.yml
+      - cp start_server.sh ./start_server.sh
+      - cp stop_server.sh ./stop_server.sh
+      - sed -i 's/@PROJ_NAME@/'${PROJ_NAME}'/' ./appspec.yml
+      - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/;' ./start_server.sh
+      - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/; s/@AWS_ACCESS_KEY_ID@/'${AWS_ACCESS_KEY_ID}'/; s/@AWS_SECRET_ACCESS_KEY@/'${AWS_SECRET_ACCESS_KEY}'/;' ./stop_server.sh
   build:
     commands:
       - echo ========================================
