--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,23 @@
 version: 0.2
-
+env:
+  variables:
+    IMAGE_REPO_URL: $IMAGE_REPO_URL
+    IMAGE_PLATFORM_NAME: node:16.15.1
+    IMAGE_APP_NAME: $IMAGE_APP_NAME
+    IMAGE_VERSION: $IMAGE_VERSION
+    PROFILE: $PROFILE
+    PROJ_NAME: $PROJ_NAME
+    COMPANY_NAME: $COMPANY_NAME
+    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - echo $IMAGE_REPO_URL
-      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+      - aws ecr get-login-password | docker login --username AWS --password-stdin IMAGE_REPO_URL
       - cp appspec.yml ./appspec.yml
       - cp start_server.sh ./start_server.sh
       - cp stop_server.sh ./stop_server.sh
