Update script start and stop service

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,7 @@ phases:
       - echo ========================================
       - echo BUILD STARTED ON `date`
       - echo Building the Docker image...
-      - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
+      - export IMAGE_VERSION=latest
       - docker build -t $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION .
   post_build:
     commands:
