--- a/appspec.yml
+++ b/appspec.yml
@@ -1,47 +1,22 @@
 version: 0.0
 os: linux
 files:
-  - source: .env
-    destination: /home/ec2-user/codedeploy
-  - source: api_down.sh
-    destination: /home/ec2-user/codedeploy
-  - source: api_deploy.sh
-    destination: /home/ec2-user/codedeploy
-  - source: docker-compose.yml
-    destination: /home/ec2-user/codedeploy
-  - source: redis.conf
-    destination: /home/ec2-user/codedeploy
-  - source: appspec.yml
-    destination: /home/ec2-user/codedeploy
-file_exists_behavior: OVERWRITE
+  - source:  /
+    destination: /home/ec2-user/@PROJ_NAME@
+    overwrite: yes
+
 permissions:
-  - object: /home/ec2-user/codedeploy/.env
-    owner: ec2-user
-    group: ec2-user
-  - object: /home/ec2-user/codedeploy/api_down.sh
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-  - object: /home/ec2-user/codedeploy/api_deploy.sh
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-  - object: /home/ec2-user/codedeploy/docker-compose.yml
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-  - object: /home/ec2-user/codedeploy/redis.conf
-    owner: ec2-user
-    group: ec2-user
-    mode: 755
-  - object: /home/ec2-user/codedeploy/appspec.yml
+  - object: /home/ec2-user/@PROJ_NAME@
     owner: ec2-user
     group: ec2-user
     mode: 755
 hooks:
-  ApplicationStop:
+  AfterInstall:
     - location: /stop_server.sh
+      timeout: 180
       runas: ec2-user
+
   ApplicationStart:
     - location: /start_server.sh
+      timeout: 180
       runas: ec2-user
