Update script start and stop service

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -48,8 +48,9 @@ artifacts:
     - 'imagedefinitions.json'
     - 'appspec.yml'
     - '.env'
-    - 'api_down.sh'
-    - 'api_deploy.sh'
+    - 'start_server.sh'
+    - 'stop_server.sh'
     - 'docker-compose.yml'
     - 'redis.conf'
     - 'yarn.lock'
+    - 'Dockerfile'
