--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+      - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - sed -i 's/@PROJ_NAME@/'${PROJ_NAME}'/' ./appspec.yml
       - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@TAG_VERSION@/'${TAG_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/;' s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/;' ./start_server.sh
       - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@TAG_VERSION@/'${TAG_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/; s/@AWS_ACCESS_KEY_ID@/'${AWS_ACCESS_KEY_ID}'/; s/@AWS_SECRET_ACCESS_KEY@/'${AWS_SECRET_ACCESS_KEY}'/;' s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/;' ./stop_server.sh
@@ -30,7 +31,6 @@ phases:
       - echo ========================================
       - echo BUILD STARTED ON `date`
       - echo Building the Docker image...
-      - export IMAGE_VERSION=latest
       - docker build -t $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION .
   post_build:
     commands:
