--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,20 +3,7 @@ env:
   variables:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
-    IMAGE_APP_NAME: "poc-miraen"
-
-    #    IMAGE_REPO_URL: "502846858339.dkr.ecr.ap-northeast-2.amazonaws.com/"
-#    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
-#    IMAGE_PLATFORM_NAME: node:16
-#    IMAGE_APP_NAME: "poc-miraen"
-#    IMAGE_VERSION: 1.0.0-dev
-#    PROFILE: $PROFILE
-#    PROJ_NAME: $PROJ_NAME
-#    COMPANY_NAME: $COMPANY_NAME
-#    AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID
-#    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-#    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-#    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    IMAGE_APP_NAME: "api-poc-miraen"
 phases:
   pre_build:
     commands:
@@ -25,6 +12,9 @@ phases:
       - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - echo $IMAGE_VERSION
       - aws s3 cp s3://poc-miraen/poc-miraen/.env .
+      - aws s3 cp s3://poc-miraen/poc-miraen/appspec.yml .
+      - aws s3 cp s3://poc-miraen/poc-miraen/start_server.sh .
+      - aws s3 cp s3://poc-miraen/poc-miraen/stop_server.sh .
       - sed -i 's/@PROJ_NAME@/'${PROJ_NAME}'/' ./appspec.yml
       - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@TAG_VERSION@/'${TAG_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/; s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/' ./start_server.sh
       - sed -i 's/@PROFILE@/'${PROFILE}'/; s/@PROJ_NAME@/'${PROJ_NAME}'/; s/@TAG_VERSION@/'${TAG_VERSION}'/; s/@AWS_ACCOUNT_ID@/'${AWS_ACCOUNT_ID}'/; s/@AWS_DEFAULT_REGION@/'${AWS_DEFAULT_REGION}'/; s/@COMPANY_NAME@/'${COMPANY_NAME}'/; s/@AWS_ACCESS_KEY_ID@/'${AWS_ACCESS_KEY_ID}'/; s/@AWS_SECRET_ACCESS_KEY@/'${AWS_SECRET_ACCESS_KEY}'/; s/@IMAGE_VERSION@/'${IMAGE_VERSION}'/' ./stop_server.sh
