--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ env:
   variables:
     IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
     IMAGE_PLATFORM_NAME: node:16.15.1
-    IMAGE_APP_NAME: "api-poc-miraen"
+    IMAGE_APP_NAME: "poc-miraen"
 phases:
   pre_build:
     commands:
