--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,8 @@ phases:
       - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
       - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - echo $IMAGE_VERSION
+      - echo $IMAGE_REPO_URL
+      - echo $IMAGE_APP_NAME
       - aws s3 cp s3://poc-miraen/poc-miraen/env .env
       - aws s3 cp s3://poc-miraen/poc-miraen/appspec.yml .
       - aws s3 cp s3://poc-miraen/poc-miraen/start_server.sh .
