--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,12 @@ env:
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
-      - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
+      - - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - echo $IMAGE_VERSION
       - echo $IMAGE_REPO_URL
       - echo $IMAGE_APP_NAME
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
       - aws s3 cp s3://poc-miraen/poc-miraen/env .env
       - aws s3 cp s3://poc-miraen/poc-miraen/appspec.yml .
       - aws s3 cp s3://poc-miraen/poc-miraen/start_server.sh .
