--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ env:
 phases:
   pre_build:
     commands:
-      - - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
+      - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - echo $IMAGE_VERSION
       - echo $IMAGE_REPO_URL
       - echo $IMAGE_APP_NAME
