--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,15 +26,15 @@ phases:
       - echo BUILD STARTED ON `date`
       - ls -la
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION .
+      - docker build -t ${IMAGE_REPO_URL}${IMAGE_APP_NAME}:$IMAGE_VERSION .
   post_build:
     commands:
       - echo ========================================
       - echo BUILD COMPLETED ON `date`
       - echo Pushing the Docker images...
-      - docker push $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION
+      - docker push ${IMAGE_REPO_URL}${IMAGE_APP_NAME}:$IMAGE_VERSION
       - echo Writing image definitions file...
-      - printf '[{"name":"%s:%s","imageUri":"%s"}]' $IMAGE_APP_NAME $IMAGE_VERSION $IMAGE_REPO_NAME:$IMAGE_VERSION > imagedefinitions.json
+      - printf '[{"name":"%s:%s","imageUri":"%s"}]' ${IMAGE_APP_NAME} $IMAGE_VERSION ${IMAGE_REPO_NAME}:$IMAGE_VERSION > imagedefinitions.json
 cache:
   paths:
     - './node_modules/**/*'
