--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       - echo BUILD STARTED ON `date`
       - ls -la
       - echo Building the Docker image...
-      - docker build -t ${IMAGE_REPO_URL}${IMAGE_APP_NAME}:$IMAGE_VERSION .
+      - docker build -t ${IMAGE_REPO_URL}/${IMAGE_APP_NAME}:$IMAGE_VERSION .
   post_build:
     commands:
       - echo ========================================
