--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,9 @@
 version: 0.2
 env:
   variables:
-    IMAGE_REPO_URL: "809695185788.dkr.ecr.ap-southeast-2.amazonaws.com/"
+    IMAGE_REPO_URL: $IMAGE_REPO_URL
     IMAGE_PLATFORM_NAME: node:16.15.1
-    IMAGE_APP_NAME: "poc-miraen"
+    IMAGE_APP_NAME: $IMAGE_APP_NAME
     AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
     AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
     AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password | docker login --username AWS --password-stdin $IMAGE_REPO_URL
+      - aws ecr get-login-password | docker login --username AWS --password-stdin ${IMAGE_REPO_URL}
       - export IMAGE_VERSION=$(date +%Y%m%d%H%M%S)
       - echo $IMAGE_VERSION
       - aws s3 cp s3://poc-miraen/poc-miraen/env .env
@@ -27,15 +27,15 @@ phases:
       - echo BUILD STARTED ON `date`
       - ls -la
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION .
+      - docker build -t ${IMAGE_REPO_URL}/${IMAGE_APP_NAME}:$IMAGE_VERSION .
   post_build:
     commands:
       - echo ========================================
       - echo BUILD COMPLETED ON `date`
       - echo Pushing the Docker images...
-      - docker push $IMAGE_REPO_URL$IMAGE_APP_NAME:$IMAGE_VERSION
+      - docker push ${IMAGE_REPO_URL}/${IMAGE_APP_NAME}:$IMAGE_VERSION
       - echo Writing image definitions file...
-      - printf '[{"name":"%s:%s","imageUri":"%s"}]' $IMAGE_APP_NAME $IMAGE_VERSION $IMAGE_REPO_NAME:$IMAGE_VERSION > imagedefinitions.json
+      - printf '[{"name":"%s:%s","imageUri":"%s"}]' ${IMAGE_APP_NAME} ${IMAGE_VERSION} ${IMAGE_APP_NAME}:$IMAGE_VERSION > imagedefinitions.json
 cache:
   paths:
     - './node_modules/**/*'
